# odg

./: .gitignore  CMakeLists.txt  LICENSE_SHORT.txt  README.md
cmake/: COPYING-CMAKE-SCRIPTS
cmake/vala/: FindVala.cmake  UseVala.cmake
demo/: CMakeLists.txt  demo1.vala  demo2.vala  demo3.vala  demo4.vala  demo5.vala  demo6.vala  demo7.vala
demo/resources/: resources.xml
src/: CMakeLists.txt  alarm.vala  bar_meter.vala  control_if.vala  gauge.vala  gauge_control.vala  gauge_factory.vala  half_round_meter.vala  hbar_meter.vala  message_source.vala  numeric_meter.vala  resources.vala  round_meter.vala  utils.vala
